<resources>
    <string name="app_name">chef-assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DevEnvStudio</string>
    <string name="nav_header_subtitle">asocil.a@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="password_text">password</string>
    <string name="email_text">email</string>
    <string name="login">Вход</string>
    <string name="registr">Регистрация</string>
    <string name="qwerty">qwerty</string>
    <string name="test_mail_ru">test@mail.ru</string>

    <string name="menu_home">Home</string>
    <string name="menu_sponge_cakes">Cakes</string>
    <string name="menu_product_store">Product Store</string>
    <string name="btTehCardText">Tech Card</string>
    <string name="btSpongeCakesText">Sponge Cakes</string>
    <string name="productNameHint">product name</string>
    <string name="addProductInfoInfo">Add product</string>
    <string name="setWeightProduct">set weight product</string>
    <string name="setPriceProduct">set price</string>
    <string name="productNameInfo">productNameInfo</string>
    <string name="addProduct">add product</string>
    <string name="btn_save_text">save</string>
    <string name="productNameText">Product</string>
    <string name="weightProductText">weight:</string>
    <string name="addRecipeInfo">recipe</string>
    <string name="cartNameHint">cart</string>
    <string name="recipeNameInfo">recipe</string>
    <string name="costProductText">cost</string>
    <string name="menu_cart_store">cart</string>
    <string name="recipeNameHint">recipe</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="recipeActivityRecipeName">recipeActivityRecipeName</string>
    <string name="deleteProductText">delete</string>
</resources>